<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:background="@color/fondo_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="32dp">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="50dp"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher_round"
            android:contentDescription="@string/desc_logo"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:textSize="34sp"
            android:textStyle="bold"
            android:textColor="@color/turquesa_oscuro"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_subtitle"
            android:textSize="16sp"
            android:textColor="@color/gris_texto"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/hint_name"
            android:padding="16dp"
            android:backgroundTint="@color/turquesa_principal"
            android:layout_marginBottom="14dp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:backgroundTint="@color/turquesa_principal"
            android:layout_marginBottom="14dp"/>

        <EditText
            android:id="@+id/etAge"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/hint_age"
            android:inputType="number"
            android:padding="16dp"
            android:backgroundTint="@color/turquesa_principal"
            android:layout_marginBottom="14dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            android:layout_marginBottom="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/btn_register_account"
            android:textStyle="bold"
            android:textSize="18sp"
            android:backgroundTint="@color/turquesa_principal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_account"
            android:textColor="@color/gris_texto"
            android:layout_marginTop="24dp"/>

        <Button
            android:id="@+id/btnBackLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_here"
            android:background="@android:color/transparent"
            android:textColor="@color/turquesa_oscuro"/>

    </LinearLayout>

</ScrollView>